--- a/linalg.html
+++ b/linalg.html
@@ -38,6 +38,7 @@
         function makeMatrix(){
         create=true;
         let n = +document.getElementById('n').value;
+        let prev = +document.getElementById('n').value;
         let html = '<table>';
         for(let i=0;i<n;i++){
             html += '<tr>';
@@ -55,11 +56,10 @@
             alert(`Please create a matrix first`);
             return;
         }
-        let n = +document.getElementById('n').value;
         let html = '<table>';
-        for(let i=0;i<n;i++){
+        for(let i=0;i<prev;i++){
             html += '<tr>';
-            for(let j=0;j<n;j++){
+            for(let j=0;j<prev;j++){
             html += `<td><input id="a${i}${j}" value=" "></td>`;
             }
             html+='</tr>';
