--- a/linalg.html
+++ b/linalg.html
@@ -31,14 +31,15 @@
         <pre id="output"></pre>
         
         
-
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/14.8.1/math.js"></script>
         <script>
         let A = [];
         let create=false;
+        let prev=0;
         function makeMatrix(){
         create=true;
         let n = +document.getElementById('n').value;
-        let prev = +document.getElementById('n').value;
+        let prev = n;
         let html = '<table>';
         for(let i=0;i<n;i++){
             html += '<tr>';
@@ -95,6 +96,16 @@
         analyze();
         }
 
+        function eigenvalues(A){
+            const result = math.eigs(A);
+            return result.values;
+        }
+
+        function solveEigenVector(A) {
+            const result = math.eigs(A);
+            return result.eigenvectors;
+        }
+
         function clone(M){ return M.map(r=>r.slice()); }
 
             function multiply(A,B){
@@ -124,22 +135,6 @@
         }
         R = multiply(transpose(Q),A);
         return {Q,R};
-        }
-
-        function eigenvalues(A,it=60){
-        let M=clone(A);
-        for(let k=0;k<it;k++){
-            let {Q,R}=qrDecomp(M);
-            M = multiply(R,Q);
-        }
-        return M.map((r,i)=>r[i]);
-        }
-
-        function solveEigenVector(A,lambda){
-        let n=A.length;
-        let M=A.map((r,i)=>r.map((x,j)=>x-(i===j?lambda:0)));
-        let v=Array(n).fill(1);
-        return v; // simplified placeholder
         }
 
         function analyze(){
